--- a/covenantclassroom/src/main/resources/application.properties
+++ b/covenantclassroom/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=covenantclassroom
+spring.thymeleaf.enable=true
+spring.web.resources.static-locations=classpath:/static/,classpath:/public/
+
+# Datasource defaults (overridden by environment variables in docker-compose)
+spring.datasource.url=jdbc:mariadb://localhost:3306/covenant_classroom
+spring.datasource.username=covenantuser
+spring.datasource.password=covenantpass123
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+# JPA / Hibernate (development defaults)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Flyway will run migrations on startup using files in db/migration
+spring.flyway.enabled=true
+
+#Dev testing user 
+app.create-dev-user=true
